Added temporary subreddit link for feedback poll
Using the technology of the re-sort modal, the game itself will temporarily prompt players to visit the subreddit and try to discover spnanon's general feedback poll. This link only appears once and only to people who have played against 30+ characters.

--- a/index.html
+++ b/index.html
@@ -1847,27 +1847,28 @@
                         <!-- Start of Modal Content -->
                         <div class="modal-content">
                             <div class="modal-header">
-                                <h3 class="modal-title text-center"><b>Character Resort</b></h3>
+                                <h3 class="modal-title text-center"><b>Game Feedback</b></h3>
                             </div>
                             <div class="modal-body">
                                 <h4>
-                                    The Winter 2019 Roster Re-Sort is now live!
+                                    The SPNatI General Feedback Poll is now live!
                                 </h4>
                                 <p>
-                                    This re-sort poll will help determine the order of characters on the main selection
-                                    screen for the next few months. Higher-voted characters will be placed closer to the
-                                    top of the roster!
+                                    A general feedback poll for Strip Poker Night at the Inventory, its character
+                                    roster, and its features is now available on the subreddit. If you can find it,
+                                    you can participate in it!
                                 </p>
                                 <p>
-                                    Now is your chance to help your favorite characters rise to prominence!
+                                    Each question is optional, and it's a way to let your voice be heard. Many of
+                                    the people who volunteer their time to bring you this game will read your answers.
                                 </p>
                                 <p>
-                                    You can vote in the Re-Sort Poll here:
+                                    You can find a link to the poll on our subreddit here:
                                 </p>
                                 <a class="bordered smooth-button green resort-link-button"
-                                    href="https://old.reddit.com/r/spnati/comments/egnhr3/resort_ix_the_rise_of_resort/"
-                                    target="_blank" rel="noreferrer">Roster
-                                    Re-Sort Poll 9</a>
+                                    href="https://www.reddit.com/r/spnati/"
+                                    target="_blank" rel="noreferrer">Strip Poker Night at the Inventory subreddit
+                                    </a>
                             </div>
                             <div class="modal-footer">
                                 <button class="bordered smooth-button modal-button" data-dismiss="modal">Close</button>
