--- a/editor source/SPNATI Character Editor/VersionHistory/v5.5.html
+++ b/editor source/SPNATI Character Editor/VersionHistory/v5.5.html
@@ -3,11 +3,20 @@
 	<li>Once per version, the editor will now inform you when a new version is available.</li>
 </ul>
 
+<h3>Wardrobe</h3>
+<ul>
+	<li>A "Classification" column has been added. This is used to classify your clothing into generic buckets (ex. a blouse, T-shirt, and sweatshirt could all be classified as a "shirt"). This makes it easier to condition dialogue based on a type of clothing being removed.</li>
+	<li>Categories are maintained in opponents/clothing.xml. Admins can adjust this list to their liking and the editor will pick up the changes, so there is no need to rely on new versions of the editor to get updates.</li>
+	<li>Authors will need to manually update existing characters' wardrobes to get the full benefits of this system.</li>
+</ul>
+
 <h3>Dialogue</h3>
 <ul>
 	<li>Day, month, and weekday checks have been added to the Game condition menu.</li>
 	<li>The variable test dropdown has been cleaned up. Things like ~target.costume~ should be accessed using Player > Target > Costume and filling in "Target" as the player.</li>
 	<li>~target.ifMale()~ can be used to conditionally output text based on the character's gender. (e.g. "~target.ifMale(he|she)~ lost again? What a loser.")</li>
+	<li>Added ability to search for markers instead of text when using Ctrl+F.</li>
+	<li>Added a Clothing > Category condition to test for a clothing's generic category as described above.</li>
 </ul>
 
 <h3>Epilogues</h3>
