background bug fix

--- a/editor source/SPNATI Character Editor/VersionHistory/v5.5.html
+++ b/editor source/SPNATI Character Editor/VersionHistory/v5.5.html
@@ -45,4 +45,5 @@
 <ul>
 	<li>Fixed issue where a character's gender could not be changed in the metadata after saving once.</li>
 	<li>Status attribute is no longer dropped from costume elements in meta.xml</li>
+	<li>Fixed issue where a variable test on a boolean background property (e.g. ~background.dark~) would always revert to false when coming back to the case.</li>
 </ul>
