Removed link to feedback poll
As answers to the general feedback poll have tapered off, I've removed the in-game link.

Sorry to make you discard your changes to your config files again!

--- a/index.html
+++ b/index.html
@@ -1847,28 +1847,27 @@
                         <!-- Start of Modal Content -->
                         <div class="modal-content">
                             <div class="modal-header">
-                                <h3 class="modal-title text-center"><b>Game Feedback</b></h3>
+                                <h3 class="modal-title text-center"><b>Character Re-Sort</b></h3>
                             </div>
                             <div class="modal-body">
                                 <h4>
-                                    The SPNatI General Feedback Poll is now live!
+                                    The Winter 2019 Roster Re-Sort is now live!
                                 </h4>
                                 <p>
-                                    A general feedback poll for Strip Poker Night at the Inventory, its character
-                                    roster, and its features is now available on the subreddit. If you can find it,
-                                    you can participate in it!
+                                    This re-sort poll will help determine the order of characters on the main selection
+                                    screen for the next few months. Higher-voted characters will be placed closer to the
+                                    top of the roster!
                                 </p>
                                 <p>
-                                    Each question is optional, and it's a way to let your voice be heard. Many of
-                                    the people who volunteer their time to bring you this game will read your answers.
+                                    Now is your chance to help your favorite characters rise to prominence!
                                 </p>
                                 <p>
-                                    You can find a link to the poll on our subreddit here:
+                                    You can vote in the Re-Sort Poll here:
                                 </p>
                                 <a class="bordered smooth-button green resort-link-button"
-                                    href="https://www.reddit.com/r/spnati/"
-                                    target="_blank" rel="noreferrer">Strip Poker Night at the Inventory subreddit
-                                    </a>
+                                    href="https://old.reddit.com/r/spnati/comments/egnhr3/resort_ix_the_rise_of_resort/"
+                                    target="_blank" rel="noreferrer">Roster
+                                    Re-Sort Poll 9</a>
                             </div>
                             <div class="modal-footer">
                                 <button class="bordered smooth-button modal-button" data-dismiss="modal">Close</button>
