custom sorting folder view

--- a/editor source/SPNATI Character Editor/VersionHistory/v5.5.html
+++ b/editor source/SPNATI Character Editor/VersionHistory/v5.5.html
@@ -12,6 +12,7 @@
 
 <h3>Dialogue</h3>
 <ul>
+	<li>Added a Folder view for sorting cases. This view organizes cases by folder name (defined in the "Case" part of the case editor). This view is special in that you can drag and drop cases within the same folder to apply your own custom sorting. This could be useful if you want to group special chains of targeted dialogue (ex. a conversation with another character) to provide a better overview of what lines apply. Please note that any sorting and folder grouping you apply is only for organizational purposes within the editor. It does not affect priority in game.</li>
 	<li>Day, month, and weekday checks have been added to the Game condition menu.</li>
 	<li>The variable test dropdown has been cleaned up. Things like ~target.costume~ should be accessed using Player > Target > Costume and filling in "Target" as the player.</li>
 	<li>~target.ifMale()~ can be used to conditionally output text based on the character's gender. (e.g. "~target.ifMale(he|she)~ lost again? What a loser.")</li>
