--- a/index.html
+++ b/index.html
@@ -657,7 +657,7 @@
                             <li><a href="#" data-value="layers-reverse">Fewest Layers</a></li>
                             <li><a href="#" data-value="name">Name (A-Z)</a></li>
                             <li><a href="#" data-value="name-reverse">Name (Z-A)</a></li>
-                            <li><a href="#" data-value="target">Targeted most by selected</a></li>
+                            <li><a href="#" data-value="target">Talks to selected</a></li>
                         </ul>
                     </div>
                 </div>
