--- a/editor source/SPNATI Character Editor/VersionHistory/v5.5.html
+++ b/editor source/SPNATI Character Editor/VersionHistory/v5.5.html
@@ -1,6 +1,6 @@
 ﻿<h3>General</h3>
 <ul>
-	<li>Once per version, the editor will now inform you when a new version is available.</li>
+	<li>Once per version, the editor will now inform you when a new version is available in the tools folder.</li>
 </ul>
 
 <h3>Wardrobe</h3>
@@ -8,6 +8,7 @@
 	<li>A "Classification" column has been added. This is used to classify your clothing into generic buckets (ex. a blouse, T-shirt, and sweatshirt could all be classified as a "shirt"). This makes it easier to condition dialogue based on a type of clothing being removed.</li>
 	<li>Categories are maintained in opponents/clothing.xml. Admins can adjust this list to their liking and the editor will pick up the changes, so there is no need to rely on new versions of the editor to get updates.</li>
 	<li>Authors will need to manually update existing characters' wardrobes to get the full benefits of this system.</li>
+	<li>Added a delete button to each row, similar to the dialogue and marker grids.</li>
 </ul>
 
 <h3>Dialogue</h3>
@@ -18,6 +19,12 @@
 	<li>~target.ifMale()~ can be used to conditionally output text based on the character's gender. (e.g. "~target.ifMale(he|she)~ lost again? What a loser.")</li>
 	<li>Added ability to search for markers instead of text when using Ctrl+F.</li>
 	<li>Added a Clothing > Category condition to test for a clothing's generic category as described above.</li>
+</ul>
+
+<h3>Recipes</h3>
+<ul>
+	<li>Recipes are now read from the tools/character_editor/recipes folder. This will allow the community to build a shared repository of recipes without having to package them with new editor releases.</li>
+	<li>Going forward, any recipes used will be tracked with a checkmark when adding a recipe so that you know which ones you've already used.</li>
 </ul>
 
 <h3>Epilogues</h3>
@@ -47,4 +54,6 @@
 	<li>Fixed issue where a character's gender could not be changed in the metadata after saving once.</li>
 	<li>Status attribute is no longer dropped from costume elements in meta.xml</li>
 	<li>Fixed issue where a variable test on a boolean background property (e.g. ~background.dark~) would always revert to false when coming back to the case.</li>
+	<li>Fixed crash when opening the dialogue row after deleting a row from the wardrobe grid.</li>
+	<li>Speech bubbles with long text fit better now.</li>
 </ul>
