Game over modal wording adjustments + tips
This changes the wording on the ending epilogue modal as suggested in #71.
The text for losing and for winning without any available epilogues is mostly
the same; in neither case do we mention epilogues.
(The win requirement for epilogues is already described in the FAQ.)

The text for winning with available epilogues does mention "extra" content
by necessity, because it's a prompt.

This also adds randomly-selected tips that are displayed in between the
header text and the list of epilogues (if applicable).
These are displayed in all cases.

Resolves #71.

--- a/index.html
+++ b/index.html
@@ -3183,6 +3183,8 @@
                             <div class="modal-header">
                                 <h3 class="modal-title text-center">The game is now over...</h3>
                                 <h5 id="epilogue-header-text" class="modal-title text-center"></h5>
+                                <hr>
+                                <h5 id="epilogue-header-tip" class="modal-title text-center"></h5>
                             </div>
                             <div class="modal-body">
                                 <div class="modal-body-container" style="width:100%">
