--- a/index.html
+++ b/index.html
@@ -3168,6 +3168,10 @@
             <button type="button" id='epilogue-restart' class="bordered smooth-button">
                 Restart?
             </button>
+            <div id="epilogue-skip-group" class="debug-only">
+                <select id="epilogue-skip-scene"></select>
+                <button type="button" id="epilogue-skip" class="bordered smooth-button green">Skip</button>
+            </div>
         </div>
     </div>
     <!-- End of Epilogue Screen -->
