Extend the Epilogue debug toolbox with a few more controls
 * Scene skip selector now includes scene names (as determined from XML).

 * Added a "hot reload" button that does a full fetch/reload of the current epilogue's XML data,
   then restarts the epilogue at the scene it left off at.
   (As requested in #73.)

 * Added an "exit to main menu" button

 * Pressing Q now toggles the debug menu on/off

--- a/index.html
+++ b/index.html
@@ -3168,10 +3168,16 @@
             <button type="button" id='epilogue-restart' class="bordered smooth-button">
                 Restart?
             </button>
-            <div id="epilogue-skip-group" class="debug-only">
-                <select id="epilogue-skip-scene"></select>
-                <button type="button" id="epilogue-skip" class="bordered smooth-button green">Skip</button>
-            </div>
+        </div>
+        <div id="epilogue-debug-group">
+            <select id="epilogue-skip-scene"></select>
+            <button type="button" id="epilogue-skip" class="bordered smooth-button green">Skip to Scene</button>
+            <button type="button" id='epilogue-reload' class="bordered smooth-button red">
+                Reload Epilogue
+            </button>
+            <button type="button" id='epilogue-exit' class="bordered smooth-button">
+                Exit Epilogue
+            </button>
         </div>
     </div>
     <!-- End of Epilogue Screen -->
