--- a/index.html
+++ b/index.html
@@ -20,17 +20,17 @@
         <div class="screen">
 
             <!-- Banner Flair -->
-            <button class="title-settings-button bordered smooth-button red" onclick="showGameSettingsModal()">
+            <button class="title-settings-button bordered smooth-button red banner-flair" onclick="showGameSettingsModal()">
                 <span class="glyphicon glyphicon-picture" aria-hidden="true"></span>
             </button>
-            <button class="bordered smooth-button red bug-report-button title-bug-report-button"
+            <button class="bordered smooth-button red banner-flair title-bug-report-button"
                 onclick="showBugReportModal()">
                 <span class="glyphicon glyphicon-warning-sign" aria-hidden="true"></span>
             </button>
-            <a class="bordered reddit-button smooth-button red" href="https://www.reddit.com/r/spnati/">
+            <a class="bordered reddit-button smooth-button red banner-flair" href="https://www.reddit.com/r/spnati/">
                 <img class="reddit-logo" src="img/reddit.png" alt="reddit" />
             </a>
-            <button class="title-load-button bordered smooth-button red banner-flair toolbar-button"
+            <button class="title-load-button bordered smooth-button red banner-flair"
                 onclick="showImportModal()">
                 <span class="glyphicon glyphicon-folder-open" aria-hidden="true"></span>
             </button>
@@ -105,17 +105,17 @@
             <img id="right-title-candy" class="title-candy" src="img/blank.png" alt="" />
 
             <!-- Banner Flair -->
-            <button class="title-settings-button bordered smooth-button red" onclick="showGameSettingsModal()">
+            <button class="title-settings-button bordered smooth-button red banner-flair" onclick="showGameSettingsModal()">
                 <span class="glyphicon glyphicon-picture" aria-hidden="true"></span>
             </button>
-            <button class="bordered smooth-button red bug-report-button title-bug-report-button"
+            <button class="bordered smooth-button red banner-flair title-bug-report-button"
                 onclick="showBugReportModal()">
                 <span class="glyphicon glyphicon-warning-sign" aria-hidden="true"></span>
             </button>
-            <a class="bordered reddit-button smooth-button red" href="https://www.reddit.com/r/spnati/">
+            <a class="bordered reddit-button smooth-button red banner-flair" href="https://www.reddit.com/r/spnati/">
                 <img class="reddit-logo" src="img/reddit.png" alt="reddit" />
             </a>
-            <button class="title-load-button bordered smooth-button red banner-flair toolbar-button"
+            <button class="title-load-button bordered smooth-button red banner-flair"
                 onclick="showImportModal()">
                 <span class="glyphicon glyphicon-folder-open" aria-hidden="true"></span>
             </button>
@@ -999,7 +999,7 @@
                             onclick="hideGroupSelectionTable()">
                             <span class="glyphicon glyphicon-eye-close" aria-hidden="true"></span>
                         </button>
-                        <button class='bordered table-bug-report-button group-bug-report-button'
+                        <button class='bordered table-bug-report-button'
                             onclick="showBugReportModal()">
                             <span class="glyphicon glyphicon-warning-sign" aria-hidden="true"></span>
                         </button>
