Add fullscreen buttons.

--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
                 onclick="showImportModal()">
                 <span class="glyphicon glyphicon-folder-open" aria-hidden="true"></span>
             </button>
+            <button class="title-fullscreen-button bordered smooth-button red banner-flair">
+                <span class="glyphicon glyphicon-fullscreen" aria-hidden="true"></span>
+            </button>
 
             <button id="warning-version-button" class="bordered smooth-button red banner-flair version-button">
                 <span class="substitute-version">Unknown Version</span><br>
@@ -118,6 +121,9 @@
             <button class="title-load-button bordered smooth-button red banner-flair"
                 onclick="showImportModal()">
                 <span class="glyphicon glyphicon-folder-open" aria-hidden="true"></span>
+            </button>
+            <button class="title-fullscreen-button bordered smooth-button red banner-flair">
+                <span class="glyphicon glyphicon-fullscreen" aria-hidden="true"></span>
             </button>
 
             <button id="title-version-button" class="bordered smooth-button red banner-flair version-button">
@@ -499,6 +505,9 @@
             </div>
 
             <!-- Hide Button -->
+	    <button class="bordered table-fullscreen-button">
+	      <span class="glyphicon glyphicon-fullscreen" aria-hidden="true"></span>
+	    </button>
             <button class='bordered hide-table-button' onclick="hideSelectionTable()">
                 <span class="glyphicon glyphicon-eye-close" aria-hidden="true"></span>
             </button>
@@ -995,6 +1004,9 @@
                 <!-- Opponent Selections -->
                 <div id="group-select-area" class="bordered opponent-area">
                     <div class="group-dock-button-row">
+		      <button class="bordered table-fullscreen-button">
+			<span class="glyphicon glyphicon-fullscreen" aria-hidden="true"></span>
+		      </button>
                         <button id="group-hide-button" class="bordered hide-table-button"
                             onclick="hideGroupSelectionTable()">
                             <span class="glyphicon glyphicon-eye-close" aria-hidden="true"></span>
@@ -2932,6 +2944,9 @@
             </div>
 
             <!-- Hide and bug report buttons -->
+            <button class="bordered table-fullscreen-button">
+                <span class="glyphicon glyphicon-fullscreen" aria-hidden="true"></span>
+            </button>
             <button class='bordered hide-table-button' onclick="toggleTableVisibility()">
                 <span class="glyphicon glyphicon-eye-close" aria-hidden="true"></span>
             </button>
