Some flair when running on mobile (at least some browsers): Status bar colour, as well as icon and shortened name when putting on the start screen.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <link rel="stylesheet" type="text/css" href="css/bootstrap-theme.min.css">
     <link rel="stylesheet" type="text/css" href="css/spni.css" id="spniStyleSheet">
     <link rel="stylesheet" type="text/css" href="css/spniDialogueUtilities.css">
+    <meta name="application-name" content="SPNatI">
+    <meta name="apple-mobile-web-app-title" content="SPNatI">
+    <meta name="theme-color" content="#BB3333">
+    <link rel="apple-touch-icon-precomposed" href="img/unknown.jpg">
 </head>
 
 <body onload="initialSetup()">
