--- a/index.html
+++ b/index.html
@@ -281,7 +281,8 @@
                 onclick="showImportModal()">
                 <span class="glyphicon glyphicon-folder-open" aria-hidden="true"></span>
             </button>
-            <button class="title-fullscreen-button bordered smooth-button red banner-flair">
+            <button class="title-fullscreen-button bordered smooth-button red banner-flair"
+		    onclick="toggleFullscreen()">
                 <span class="glyphicon glyphicon-fullscreen" aria-hidden="true"></span>
             </button>
 
@@ -467,9 +468,6 @@
             </div>
 
             <!-- Hide Button -->
-	    <button class="bordered table-fullscreen-button">
-	      <span class="glyphicon glyphicon-fullscreen" aria-hidden="true"></span>
-	    </button>
             <button class='bordered hide-table-button' onclick="hideSelectionTable()">
                 <span class="glyphicon glyphicon-eye-close" aria-hidden="true"></span>
             </button>
@@ -966,9 +964,6 @@
                 <!-- Opponent Selections -->
                 <div id="group-select-area" class="bordered opponent-area">
                     <div class="group-dock-button-row">
-		      <button class="bordered table-fullscreen-button">
-			<span class="glyphicon glyphicon-fullscreen" aria-hidden="true"></span>
-		      </button>
                         <button id="group-hide-button" class="bordered hide-table-button"
                             onclick="hideGroupSelectionTable()">
                             <span class="glyphicon glyphicon-eye-close" aria-hidden="true"></span>
@@ -2906,9 +2901,6 @@
             </div>
 
             <!-- Hide and bug report buttons -->
-            <button class="bordered table-fullscreen-button">
-                <span class="glyphicon glyphicon-fullscreen" aria-hidden="true"></span>
-            </button>
             <button class='bordered hide-table-button' onclick="toggleTableVisibility()">
                 <span class="glyphicon glyphicon-eye-close" aria-hidden="true"></span>
             </button>
@@ -3109,6 +3101,11 @@
                                 onclick="showOptionsModal()">
                                 <span class="glyphicon glyphicon-cog" aria-hidden="true"></span>
                                 <span class="game-menu-label">Options</span>
+                            </button></li>
+                        <li><button id="game-fullscreen-button" class="dropdown-button-item bordered smooth-button red"
+                                onclick="toggleFullscreen()">
+                                <span class="glyphicon glyphicon-fullscreen" aria-hidden="true"></span>
+                                <span class="game-menu-label">Toggle full screen mode</span>
                             </button></li>
                     </ul>
                 </div>
