Hide the Game menu tooltip when clicking on the button or in the menu.
I noticed that the tooltip tends to get stuck on mobile devices.

--- a/index.html
+++ b/index.html
@@ -3069,7 +3069,7 @@
                 </button>
 
                 <div class="btn-group dropup game-menu-dropup" data-toggle="tooltip" data-placement="right"
-                    title="Game Menu">
+                    title="Game Menu" onclick="$(this).tooltip('hide')">
                     <button type="button" class="bordered smooth-button red dropdown-toggle menu-dropdown-button"
                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span
                             class="glyphicon glyphicon-th-list" aria-hidden="true"></span></button>
