--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta name="application-name" content="SPNatI">
     <meta name="apple-mobile-web-app-title" content="SPNatI">
     <meta name="theme-color" content="#BB3333">
-    <link rel="apple-touch-icon-precomposed" href="img/unknown.jpg">
+    <link rel="apple-touch-icon-precomposed" href="img/brighterlogoicon.png">
 </head>
 
 <body onload="initialSetup()">
