Add a fullscreen button to the epilogue screen as well, as double-tapping doesn't work in Firefox there either - at all.

--- a/index.html
+++ b/index.html
@@ -3144,6 +3144,9 @@
                 Restart?
             </button>
         </div>
+        <button type="button" id="epilogue-fullscreen-button" class="bordered smooth-button" onclick="toggleFullscreen()">
+            <span class="glyphicon glyphicon-fullscreen" aria-hidden="true"></span>
+        </button>
         <div id="epilogue-debug-group">
             <select id="epilogue-skip-scene"></select>
             <button type="button" id="epilogue-skip" class="bordered smooth-button green">Skip to Scene</button>
