Open all links in a new tab *except* the spnati.net link on the warning screen, because that's the one link that's safe to open in the same tab.

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         original owners.</p>
 
                     <p>The latest version of the game can be played at
-                        <br><a href="https://spnati.net" target="_blank"><b>spnati.net</b></a></p>
+                        <br><a href="https://spnati.net/"><b>spnati.net</b></a></p>
 
                     <br>
 
@@ -274,7 +274,7 @@
                 onclick="showBugReportModal()">
                 <span class="glyphicon glyphicon-warning-sign" aria-hidden="true"></span>
             </button>
-            <a class="bordered reddit-button smooth-button red banner-flair" href="https://www.reddit.com/r/spnati/">
+            <a class="bordered reddit-button smooth-button red banner-flair" target="_blank" href="https://www.reddit.com/r/spnati/">
                 <img class="reddit-logo" src="img/reddit.png" alt="reddit" />
             </a>
             <button class="title-load-button bordered smooth-button red banner-flair"
@@ -1022,7 +1022,7 @@
                             <span class="glyphicon glyphicon-triangle-left" aria-hidden="true"></span>
                         </button>
                         <button class="bordered smooth-button go-page-button" onclick="changeGroupPage(true, 0)">
-                            <span style="margin-top:2px"><b>Go</b></span>
+                            <span class="glyphicon glyphicon-random" aria-hidden="true"></span>
                         </button>
                         <button class="bordered smooth-button right-page-button" onclick="changeGroupPage(false, 1)">
                             <span class="glyphicon glyphicon-triangle-right" aria-hidden="true"></span>
@@ -1649,12 +1649,12 @@
                                     To submit an issue report <em>manually</em>:
                                     <ol>
                                         <li>Copy the Issue Report Data above into a text-sharing service such as <a
-                                                href="https://pastebin.com/">Pastebin</a> or <a
-                                                href="https://gist.github.com">Gist</a>.</li>
+                                                target="_blank" href="https://pastebin.com/">Pastebin</a> or <a
+                                                target="_blank" href="https://gist.github.com">Gist</a>.</li>
                                         <li>Submit your issue report (with the Data above!) to the developers on our
-                                            subreddit, <a href="https://www.reddit.com/r/spnati">/r/spnati</a> or
+                                            subreddit, <a target="_blank" href="https://www.reddit.com/r/spnati">/r/spnati</a> or
                                             through our <a
-                                                href="https://reddit.com/r/spnati/comments/98k7s4/reminder_95_percent_of_the_discussion_about_this/">Discord
+                                                target="_blank" href="https://reddit.com/r/spnati/comments/98k7s4/reminder_95_percent_of_the_discussion_about_this/">Discord
                                                 server</a>.</li>
                                     </ol>
                                     Keep in mind that bug reports sent to us are publically viewable!
@@ -1833,7 +1833,7 @@
                                     You can vote in the Re-Sort Poll here:
                                 </p>
                                 <a class="bordered smooth-button green resort-link-button"
-                                    href="https://old.reddit.com/r/spnati/comments/egnhr3/resort_ix_the_rise_of_resort/"
+                                    target="_blank" href="https://old.reddit.com/r/spnati/comments/egnhr3/resort_ix_the_rise_of_resort/"
                                     target="_blank" rel="noreferrer">Roster
                                     Re-Sort Poll 9</a>
                             </div>
@@ -1967,10 +1967,10 @@
                                         </p>
                                         <ul>
                                             <li><a
-                                                    href="https://old.reddit.com/r/spnati/">https://old.reddit.com/r/spnati/</a>
+                                                    target="_blank" href="https://old.reddit.com/r/spnati/">https://old.reddit.com/r/spnati/</a>
                                             </li>
                                             <li><a
-                                                    href="https://old.reddit.com/r/spnati/comments/ccuy2s/discussion_and_suggestion_thread/">https://old.reddit.com/r/spnati/comments/ccuy2s/discussion_and_suggestion_thread/</a>
+                                                    target="_blank" href="https://old.reddit.com/r/spnati/comments/ccuy2s/discussion_and_suggestion_thread/">https://old.reddit.com/r/spnati/comments/ccuy2s/discussion_and_suggestion_thread/</a>
                                             </li>
                                         </ul>
                                         <p>The majority of community and development discussion takes place on the
@@ -1982,7 +1982,7 @@
                                             the moderators for SPNATI have editing privileges, and being listed on it is
                                             not a rite-of-passage.</p>
                                         <p><a
-                                                href="https://docs.google.com/spreadsheets/d/e/2PACX-1vRejQBHSnenImBLUEX5qlmxdopG0c_O9uWklerYr6v5yJ00_UUcQiOvqC6t6CUeKsRAkd2769YzA67P/pubhtml#">https://docs.google.com/spreadsheets/d/e/2PACX-1vRejQBHSnenImBLUEX5qlmxdopG0c_O9uWklerYr6v5yJ00_UUcQiOvqC6t6CUeKsRAkd2769YzA67P/pubhtml#</a>
+                                                target="_blank" href="https://docs.google.com/spreadsheets/d/e/2PACX-1vRejQBHSnenImBLUEX5qlmxdopG0c_O9uWklerYr6v5yJ00_UUcQiOvqC6t6CUeKsRAkd2769YzA67P/pubhtml#">https://docs.google.com/spreadsheets/d/e/2PACX-1vRejQBHSnenImBLUEX5qlmxdopG0c_O9uWklerYr6v5yJ00_UUcQiOvqC6t6CUeKsRAkd2769YzA67P/pubhtml#</a>
                                         </p>
                                     </div>
                                 </div>
@@ -2246,13 +2246,13 @@
                                         different sites, even with the same version number?</h4>
                                     <div class="faq-answer">
                                         <p>Versions of SPNATI with more characters tend to be rehosted versions on
-                                            proprietary porn sites. While <a href="https://spnati.net/">spnati.net</a>
+                                            proprietary porn sites. While <a target="_blank" href="https://spnati.net/">spnati.net</a>
                                             uses free hosting space, many porn sites that rehost it pay for their own
                                             server space through advertisements, so they can afford to host all of the
                                             characters online.</p>
                                         <p>However, rehosted versions are slow to update, meaning brand-new characters
                                             and bugfixes might not be present there. <a
-                                                href="https://spnati.net/">spnati.net</a> is the official version of the
+                                                target="_blank" href="https://spnati.net/">spnati.net</a> is the official version of the
                                             game and will always be the most up-to-date (including changes to this FAQ),
                                             and you can still download the offline version to play with the older and
                                             incomplete characters. The version number rarely updates and usually does
@@ -2265,7 +2265,7 @@
                                         <p>You can request that certain characters be made on the Discord servers or the
                                             following discussion thread:</p>
                                         <p><a
-                                                href="https://old.reddit.com/r/spnati/comments/ccuy2s/discussion_and_suggestion_thread/">https://old.reddit.com/r/spnati/comments/ccuy2s/discussion_and_suggestion_thread/</a>
+                                                target="_blank" href="https://old.reddit.com/r/spnati/comments/ccuy2s/discussion_and_suggestion_thread/">https://old.reddit.com/r/spnati/comments/ccuy2s/discussion_and_suggestion_thread/</a>
                                         </p>
                                         <p>However, because of the time and effort making a character requires, you are
                                             very unlikely to find someone willing to make a character for you. Instead,
@@ -2280,7 +2280,7 @@
                                     <div class="faq-answer">
                                         <p>You can download bundles for the offline version from here:</p>
                                         <p><a
-                                                href="https://spnati.net/bundles/download-bundles.html">https://spnati.net/bundles/download-bundles.html</a>
+                                                target="_blank" href="https://spnati.net/bundles/download-bundles.html">https://spnati.net/bundles/download-bundles.html</a>
                                         </p>
                                         <p>Follow the instructions on that page to download and set up the offline
                                             version. This will allow you to download the entire game and all its files;
@@ -2305,7 +2305,7 @@
                                             Also remember to use the included <code>start_offline</code> executable or
                                             script, or alternately use the workaround here:
                                             <a
-                                                href="https://old.reddit.com/r/spnati/comments/cd7h0f/possible_firefox_68_workaround_without_hosting/">https://old.reddit.com/r/spnati/comments/cd7h0f/possible_firefox_68_workaround_without_hosting/</a>
+                                                target="_blank" href="https://old.reddit.com/r/spnati/comments/cd7h0f/possible_firefox_68_workaround_without_hosting/">https://old.reddit.com/r/spnati/comments/cd7h0f/possible_firefox_68_workaround_without_hosting/</a>
                                         </p>
                                         <p>It's also possible you forgot to extract the game files from the .zip you
                                             downloaded.</p>
@@ -2317,7 +2317,7 @@
                                         <p>You can do this very easily without redownloading the game every time. Follow
                                             the instructions here:</p>
                                         <p><a
-                                                href="https://old.reddit.com/r/spnati/comments/824j7p/keep_your_offline_version_up_to_date_with_github/">https://old.reddit.com/r/spnati/comments/824j7p/keep_your_offline_version_up_to_date_with_github/</a>
+                                                target="_blank" href="https://old.reddit.com/r/spnati/comments/824j7p/keep_your_offline_version_up_to_date_with_github/">https://old.reddit.com/r/spnati/comments/824j7p/keep_your_offline_version_up_to_date_with_github/</a>
                                         </p>
                                     </div>
                                 </div>
@@ -2557,7 +2557,7 @@
                                             <li>Try running the game using the provided <code>start-offline</code>
                                                 program, located in the SPNATI directory.</li>
                                             <li>Alternatively, follow the instructions from <a
-                                                    href="https://old.reddit.com/r/spnati/comments/cd7h0f/possible_firefox_68_workaround_without_hosting/">this
+                                                    target="_blank" href="https://old.reddit.com/r/spnati/comments/cd7h0f/possible_firefox_68_workaround_without_hosting/">this
                                                     post on Reddit.</a>
                                             </li>
                                         </ul>
@@ -2572,12 +2572,12 @@
                                         <h4>Suggested Solutions:</h4>
                                         <ul>
                                             <li>Download the game using our <a
-                                                    href="https://spnati.net/bundles/download-bundles.html">bundle
+                                                    target="_blank" href="https://spnati.net/bundles/download-bundles.html">bundle
                                                     system</a>. You can extract those bundles directly into this copy of
                                                 SPNATI.</li>
                                             <li>If you're using Git to download the game, make sure that <a
-                                                    href="https://git-lfs.github.com/">Git LFS</a> is <a
-                                                    href="https://github.com/git-lfs/git-lfs/wiki/Installation">properly
+                                                    target="_blank" href="https://git-lfs.github.com/">Git LFS</a> is <a
+                                                    target="_blank" href="https://github.com/git-lfs/git-lfs/wiki/Installation">properly
                                                     installed</a> on your system.<br>Afterwards, you can run <code>git
                                                     lfs
                                                     pull</code> or re-clone to get the correct images.</li>
