Restore the Go button on the group select page.
I accidentally changed it into a Random button that I had been experimenting with.

--- a/index.html
+++ b/index.html
@@ -1022,7 +1022,7 @@
                             <span class="glyphicon glyphicon-triangle-left" aria-hidden="true"></span>
                         </button>
                         <button class="bordered smooth-button go-page-button" onclick="changeGroupPage(true, 0)">
-                            <span class="glyphicon glyphicon-random" aria-hidden="true"></span>
+                            <span style="margin-top:2px"><b>Go</b></span>
                         </button>
                         <button class="bordered smooth-button right-page-button" onclick="changeGroupPage(false, 1)">
                             <span class="glyphicon glyphicon-triangle-right" aria-hidden="true"></span>
