Simplify and tidy up keyboard handling and epilogue event handling and buttons.
keyup handlers per screen are stored using .data() and activated/deactivated by screenTransition().

Epilogues can now be advanced with the spacebar or right arrow key and backed up through with the left arrow key.

epilogueContainer.dataset is no longer used.

--- a/index.html
+++ b/index.html
@@ -3150,7 +3150,7 @@
 
     <!-- Start of Epilogue Screen -->
     <div id="epilogue-screen" role="dialog" hidden>
-        <div id='epilogue-container' data-background='-1' data-scene='-1'>
+        <div id="epilogue-container">
             <div id="epilogue-spinner" class="spinner" style="display: none">
                 <div class="spinner-pip"></div>
                 <div class="spinner-pip"></div>
@@ -3168,16 +3168,16 @@
             <button type="button" id='epilogue-restart' class="bordered smooth-button">
                 Restart?
             </button>
-        </div>
-        <div id="epilogue-debug-group">
-            <select id="epilogue-skip-scene"></select>
-            <button type="button" id="epilogue-skip" class="bordered smooth-button green">Skip to Scene</button>
-            <button type="button" id='epilogue-reload' class="bordered smooth-button red">
-                Reload Epilogue
-            </button>
-            <button type="button" id='epilogue-exit' class="bordered smooth-button">
-                Exit Epilogue
-            </button>
+            <div id="epilogue-debug-group" hidden>
+                <select id="epilogue-skip-scene"></select>
+		<button type="button" id="epilogue-skip" class="bordered smooth-button green">Skip to Scene</button>
+		<button type="button" id='epilogue-reload' class="bordered smooth-button red">
+                    Reload Epilogue
+		</button>
+		<button type="button" id='epilogue-exit' class="bordered smooth-button">
+                    Exit Epilogue
+		</button>
+	    </div>
         </div>
     </div>
     <!-- End of Epilogue Screen -->
