--- a/index.html
+++ b/index.html
@@ -2450,6 +2450,51 @@
                                     </div>
                                 </div>
                             </div>
+
+                            <!-- Licensing -->
+                            <div class="help-page container-fluid" data-page="8" style="display:none">
+                                <h2>Legal Information</h2>
+                                <div class="faq-question-container">
+                                    <h4 class="faq-question">The MIT License (MIT)</h4>
+                                    <div class="faq-answer">
+                                        <p>Copyright (c) 2015 The SPNATI Contributors</p>
+                                        <p>
+                                            Permission is hereby granted, free of charge, to any person obtaining a copy
+                                            of this software and associated documentation files (the "Software"), to deal
+                                            in the Software without restriction, including without limitation the rights
+                                            to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+                                            copies of the Software, and to permit persons to whom the Software is
+                                            furnished to do so, subject to the following conditions:
+                                        </p>
+                                        <p>
+                                            The above copyright notice and this permission notice shall be included in all
+                                            copies or substantial portions of the Software.
+                                        </p>
+                                        <p>
+                                            THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+                                            IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+                                            FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+                                            AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+                                            LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+                                            OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
+                                            SOFTWARE.
+                                        </p>
+                                    </div>
+                                </div>
+                                <div class="faq-question-container">
+                                    <h4 class="faq-question">For Contributors:</h4>
+                                    <div class="faq-answer">
+                                        <p>
+                                            The vast majority of open-source software, by default, operates on "inbound = outbound" licensing: in other words, one license covers both "inbound"
+                                            licensing (from contributors to the project), and "outbound" licensing (from the project back to contributors and users).
+                                        </p>
+                                        <p>
+                                            SPNATI also operates by this rule: by submitting contributions to SPNATI, you implicitly agree to make your contributions publically available to us
+                                            under the MIT License, posted above.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                         <div class="modal-footer">
                             <nav aria-label="Page navigation">
@@ -2472,6 +2517,8 @@
                                     <li class="help-page-select" data-page="6"><a href="#" data-select-page="6">6</a>
                                     </li>
                                     <li class="help-page-select" data-page="7"><a href="#" data-select-page="7">7</a>
+                                    </li>
+                                    <li class="help-page-select" data-page="8"><a href="#" data-select-page="8">8</a>
                                     </li>
                                     <li class="help-page-select">
                                         <a href="#" aria-label="Next" data-select-page="next">
