Use one handler for all epilogue button events
This commit unifies all of the event handlers attached to the
epilogue buttons into a single, unified event handler attached
to the #epilogue-buttons container element.

Previously, when event handlers were attached to each button
individually, they conflicted with the #epilogue-buttons event handler
set up to allow users to move back through an epilogue by clicking on
empty space.

Although there _was_ a function set up to try and prevent this by
calling stopPropagation() in a jQuery delegated event handler, it
was ineffective because stopPropagation() doesn't prevent other
handlers bound to the same element from running.
The stopImmediatePropagation() method does, however.

I didn't realize stopImmediatePropagation() existed until after I'd
already written the unified event handler, however.
(Though I did use it after learning about it!)

This does seem _slightly_ cleaner than having a bunch of separate
event handlers all over the place, though it's ultimately kinda
trivial.

In any case, this fixes the reported issues with users being unable
to click forward to the endings of epilogues.

--- a/index.html
+++ b/index.html
@@ -3181,25 +3181,25 @@
             </div>
         </div>
         <div id='epilogue-buttons'>
-            <button type="button" id='epilogue-next' class="bordered smooth-button">
+            <button type="button" id='epilogue-next' data-action="next" class="bordered smooth-button">
                 Next
             </button>
-            <button type="button" id='epilogue-previous' class="bordered smooth-button">
+            <button type="button" id='epilogue-previous' data-action="prev" class="bordered smooth-button">
                 Previous
             </button>
-            <button type="button" id='epilogue-restart' class="bordered smooth-button">
+            <button type="button" id='epilogue-restart' data-action="exit" class="bordered smooth-button">
                 Restart?
             </button>
-            <button type="button" id="epilogue-fullscreen-button" class="bordered smooth-button" onclick="toggleFullscreen()">
+            <button type="button" id="epilogue-fullscreen-button" data-action="fullscreen" class="bordered smooth-button">
                 <span class="glyphicon glyphicon-fullscreen" aria-hidden="true"></span>
             </button>
             <div id="epilogue-debug-group" hidden>
                 <select id="epilogue-skip-scene"></select>
-                <button type="button" id="epilogue-skip" class="bordered smooth-button green">Skip to Scene</button>
-                <button type="button" id='epilogue-reload' class="bordered smooth-button red">
+                <button type="button" id="epilogue-skip" data-action="skip" class="bordered smooth-button green">Skip to Scene</button>
+                <button type="button" id='epilogue-reload' data-action="reload" class="bordered smooth-button red">
                     Reload Epilogue
                 </button>
-                <button type="button" id='epilogue-exit' class="bordered smooth-button">
+                <button type="button" id='epilogue-exit' data-action="exit" class="bordered smooth-button">
                     Exit Epilogue
                 </button>
 	        </div>
